--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
+    id 'com.google.devtools.ksp'
     id 'kotlin-parcelize'
 }
 
@@ -69,7 +69,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.11.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.startup:startup-runtime:1.2.0'
-    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.14.0'
+    ksp 'com.squareup.moshi:moshi-kotlin-codegen:1.15.2'
 
     // Joda
     implementation 'net.danlew:android.joda:2.13.0.1'
