--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,5 @@ plugins {
     id 'com.android.application' version '8.9.0' apply false
     id 'com.android.library' version '8.9.0' apply false
     id 'org.jetbrains.kotlin.android' version '2.0.21' apply false
+    id 'com.google.devtools.ksp' version '2.1.10-1.0.31' apply false
 }
